# angular-architect-bazel-starter

./: .bazelrc  BUILD.bazel  WORKSPACE  angular.json  package.json
client/: BUILD.bazel
client/src/: index.html  styles.sass
client/src/app/: app.component.html  app.component.spec.ts
